# receipt-ocr

./: .dockerignore  README.md  pyproject.toml
.github/workflows/: receipt-ocr-app-docker.yml  receipt-ocr-daily-check.yml  release-receipt-ocr-app-docker.yml  tesseract-ocr-docker.yml
app/: Dockerfile  README.md  pyproject.toml  server.py
src/receipt_ocr/: cli.py  constants.py  prompts.py  providers.py  pyproject.toml
src/receipt_ocr/receipt_ocr/: __init__.py  categorization.py  constants.py  processors.py  prompts.py  providers.py
tests/parity_receipt_ocr/: test_response_formats.py
tests/receipt_ocr/: test_categorization.py  test_cli.py  test_processors.py  test_prompts.py  test_providers.py
