[project]
name = "receipt-ocr-api"
version = "0.1.0"
description = "FastAPI service for Receipt OCR"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi[standard]==0.128",
  "pillow",
  "python-dotenv",
  "python-multipart==0.0.22",
  "receipt-ocr",
]

[tool.uv.sources]
receipt-ocr = { workspace = true }
